--- a/grocery.css
+++ b/grocery.css
@@ -71,7 +71,7 @@ html body .btn-list{
     border: none;
     outline: none;
     background-color: #1089e3;
-    color: #1f0d1f;
+    color: white;
     font-weight: 700;
     border-radius: 7%;
     border: 1;
